Update Univariate Time Series Forecasting - Auto ARIMA.ipynb

--- a/Univariate Time Series Forecasting - Auto ARIMA.ipynb
+++ b/Univariate Time Series Forecasting - Auto ARIMA.ipynb
@@ -71,7 +71,7 @@
     "# Step 1 - Data pre processing\n",
     "# =============================================================================\n",
     "\n",
-    "# Checking if the data has any discrapancies \n",
+    "# Checking if the data has any discrepancies \n",
     "print(df.dtypes)\n",
     "print(df['date'].isnull().sum())\n",
     "print(len(df['date'].unique())) #We have data for 1258 days\n",
